--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [2.7, 3.5, 3.6, 3.7, 3.8]
+        python: [3.6, 3.7, 3.9]
 
     steps:
       - uses: actions/checkout@v2
@@ -33,5 +33,5 @@ jobs:
         run: |
           python -m pip install coveralls
           coveralls --service=github
-        if: ${{ matrix.python == '3.8' }}
+        if: ${{ matrix.python == '3.9' }}
 
