--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
-name: Setup Python for tests
+name: Enviro+ Python Library Tests
 
 on:
   push:
     branches:
       - main
+  pull_request:
 
 jobs:
   test:
@@ -34,5 +35,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          python -m pip install coveralls
+          python3 -m pip3 install coveralls
           coveralls --service=github
