--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade setuptools tox
+          pip3 install --upgrade setuptools tox
 
       - name: Run Tests
         run: |
