--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip3 install --upgrade setuptools tox
+          python3 -m pip install --upgrade pip setuptools tox py
 
       - name: Run Tests
         run: |
