--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          python3 -m pip install --upgrade pip setuptools tox py
+          python3 -m pip install --upgrade pip setuptools tox pytest pytest-cov
 
       - name: Run Tests
         run: |
