Snyk GH action fixes

--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,9 +1,10 @@
-name: Snyk security scan
+name: Snyk Security Scan
 
 on:
   push:
     branches:
-    - main
+      - main
+  pull_request:
 
 jobs:
   security:
@@ -11,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/python@master
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
