--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -14,6 +14,10 @@ jobs:
       security-events: write
     steps:
       - uses: actions/checkout@master
+      - name: Install required packages
+        run: |
+          sudo apt-get update
+          pip install -r requirements.txt
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         continue-on-error: true # To make sure that SARIF upload gets called
