--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install required packages
         run: |
           sudo apt-get update
-          pip install -r requirements.txt
+          python3 -m pip install -r requirements.txt
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         continue-on-error: true # To make sure that SARIF upload gets called
