--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Install required packages
         run: |
-          sudo apt-get update
+          apt-get update
           python3 -m pip install -r requirements.txt
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
