--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -21,7 +21,7 @@ jobs:
           python3 -m pip install -r requirements.txt
 
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python@main
+        uses: snyk/actions/python@master
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
