--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,6 +140,6 @@ commands = [
 	"raspi-config nonint do_spi 0",
 	"raspi-config nonint do_i2c 0",
 	"printf \"Setting up serial for PMS5003..\n\"",
-	"raspi-config nonint do_serial 1",
-	"raspi-config nonint set_config_var enable_uart 1 $CONFIG"
+	"sudo raspi-config nonint do_serial_cons 1",
+	"sudo raspi-config nonint do_serial_hw 1"
 ]
