--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ classifiers = [
     "Topic :: System :: Hardware",
 ]
 dependencies = [
+    "gpiod >= 2.1.3",
+    "gpiodevice >= 0.0.3",
     "pimoroni-bme280 >= 1.0.0",
     "pms5003 >= 1.0.0",
     "ltr559 >= 1.0.0",
