--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,6 @@
 name: Tests
 
 on:
-  pull_request:
   push:
     branches:
       - main
@@ -12,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ['3.9', '3.10', '3.11']
+        python: [3.x]
+        architecture: "ARM32"
 
     steps:
       - name: Checkout Code
@@ -25,17 +25,15 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          make dev-deps
+          python -m pip install --upgrade setuptools tox
 
       - name: Run Tests
         run: |
-          make pytest
+          tox -e py
 
       - name: Coverage
-        if: ${{ matrix.python == '3.9' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python -m pip install coveralls
           coveralls --service=github
-
